fix whitespace on modal body

--- a/frontend/src/components/viewTemplateModalComponent/viewTemplateModalComponent.css
+++ b/frontend/src/components/viewTemplateModalComponent/viewTemplateModalComponent.css
@@ -10,8 +10,12 @@
     margin-top: 0px;
 }
 
+.modal-dialog-scrollable #body.modal-body {
+    overflow-y: visible;
+}
+
 #body {
-    padding: 1rem 1.5rem 1rem 1.5rem;
+    padding: 0 1.5rem 1rem 1.5rem;
 }
 
 #viewModal .modal-content {
@@ -77,8 +81,9 @@
 
 #footer {
     padding: .75rem 1.5rem .75rem 1.5rem;
-    max-height: 350px;
     overflow-y: auto;
+    height: 400px;
+    flex: 0 1 auto;
 }
 
 #tools {
@@ -139,6 +144,7 @@
 
 .dynamicParameters {
     width: 100%;
-    height: 200px;
+    height: 250px;
     overflow-y: scroll;
+    padding-top:10px;
 }
